# rsx_arm

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  arm_instructions.md  arm_trajectory_planning.py  df  docker-compose.yml  humble-setup.sh  jazzy-setup.sh  limit_log.txt  new_repo_setup.sh  requirements.txt  rover-setup.sh  setup_can.bash
.devcontainer/: entrypoint.sh  sync_dotfiles.sh
.github/workflows/: ci.yml
OLD_arm_moveit_config/config/: Arm_URDF_2025.ros2_control.xacro  moveit_controllers.yaml  ompl_planning.yaml
arm_can/: package.xml  setup.cfg  setup.py
arm_can/arm_can/: CAN_power_send.py  CAN_recv.py  CAN_send.py  CAN_utilities.py
arm_controller/: package.xml  setup.py
arm_controller/arm_controller/: can_connection.py  can_logic_node.py  can_sender_node.py  dual_stream_viewer.py  dummy_controller.py  main_controller.py  safety.py
arm_controller/test/: can_test.py  main_controller_test.py
arm_launch/: CMakeLists.txt  package.xml  setup.py
arm_launch/launch/: arm_2022_rviz_launch.py  arm_2023_gazebo_old_launch.py  arm_assemble_pc_launch.py  arm_basics_launch.py  arm_gazebo_launch.py  arm_moveit_launch.py  arm_moveit_rviz_launch.py  arm_point_cloud_test_launch.py  arm_rviz.launch  arm_rviz_launch.py  arm_sci_launch.py  arm_urdf_testing_launch.py
arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
arm_moveit_config/config/: Arm_URDF_2025.ros2_control.xacro  Arm_URDF_2025.srdf  Arm_URDF_2025.urdf.xacro  Arm_URDF_2026.ros2_control.xacro  Arm_URDF_2026.srdf  Arm_URDF_2026.urdf.xacro  global_planner.yaml  hybrid_planning_manager.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  local_planner.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arm_moveit_hw_interface/: CMakeLists.txt  arm_moveit_hardware_plugin.xml  package.xml
arm_moveit_hw_interface/include/arm_moveit_hw_interface/: arm_moveit_hardware.hpp
arm_moveit_hw_interface/src/: arm_moveit_hardware.cpp
arm_msgs/: CMakeLists.txt  package.xml
arm_msgs/action/: PlanAndExecute.action
arm_msgs/msg/: ArmInputs.msg  ArmStatuses.msg  KeyboardCoords.msg  TargetPosition.msg  TargetPositionArray.msg
arm_msgs/srv/: PlanMotion.srv
arm_utilities/: package.xml  setup.cfg  setup.py
arm_utilities/arm_configs/: __init__.py  arm_controller_default.yaml  loader.py  redragon_k552.yaml  schema.py
arm_utilities/arm_utilities/: arm_can_utils.py  arm_control_utils.py  arm_enum_utils.py  arm_test_utils.py
arm_utilities/test/: control_utils_test.py
auto_keyboard/: package.xml  setup.cfg  setup.py
auto_keyboard/auto_keyboard/: aruco.jpg:Zone.Identifier  aruco_tester.py  camera_node.py  keyboard_key_to_global.py  keyboard_utils.py  testing.py
auto_keyboard_demo/: package.xml  setup.cfg  setup.py
auto_keyboard_demo/auto_keyboard_demo/: publisher_node.py  subscriber_node.py
auto_keyboard_msgs/: CMakeLists.txt  package.xml
auto_keyboard_msgs/msg/: KeyboardGeometry.msg  KeyboardKeyExtra.msg
can/: package.xml  setup.cfg  setup.py
can/can/: CAN_power_send.py  CAN_recv.py  CAN_send.py  CAN_utilities.py
controller/: package.xml  setup.py
controller/controller/: arm_controller.py  arm_keyboard_controller.py
controller/test/: controller_test.py
docker-scripts/: README.md  add_alias.sh  build.sh  build_ws.sh  build_ws_old.sh  clean_ws.sh  deps.sh  down.sh  enter.sh  env-linux.sh  env-wsl.sh  scap-deps.sh  setup_ws.sh  up.sh  windows_up.ps1
gui/: arm_rviz_launch.py  package.xml  setup.py
gui/gui/: README.md  arm_display_gui.py  arm_gui.py  arm_gui_controller.py  config.yaml  gui  gui.py  gui_camera.py  new_gui.py  qt5_gui.py  run_gui.sh  webcam_test.py
gui/scripts/: run_gui.bash
ik/: package.xml  setup.py
ik/ik/: arm_class.py  arm_inverse_kinematics.py  arm_inverse_kinematics_Migration_Plan.md  arm_sample.py  arm_sci.py  arm_science_ik.py  fake_manual.py  ik_library.py
launch/: arm_2023_gazebo_old_launch.py  arm_assemble_pc_launch.py  arm_basics_launch.py  arm_gazebo_launch.py  arm_point_cloud_test_launch.py  arm_sci_launch.py  arm_urdf_testing_launch.py
legacy/: jazzy-setup.sh
manual/: package.xml  setup.py
manual/manual/: manual.py
manual/test/: manual_test.py
moveit_path_planning/: CMakeLists.txt  IMPLEMENTATION_CHANGELOG.md  README.md  package.xml  setup.cfg  setup.py
moveit_path_planning/config/: planner_server.yaml
moveit_path_planning/include/: PathPlannerNode.hpp
moveit_path_planning/include/moveit_path_planning/: planner_server.hpp
moveit_path_planning/launch/: planner_server.launch.py  planner_server_topic_publisher.launch.py  planner_server_topic_publisher.py  rviz_planning_demo.launch.py
moveit_path_planning/scripts/: example_action_client.py  example_planner_client.py  path_planning_tests.sh
moveit_path_planning/src/: JointsToRviz.cpp  PathPlannerNode.cpp  planner_server.cpp  planner_server_main.cpp  publishPath.cpp  test_movements.cpp
moveit_path_planning/test/: test_planner_server.cpp
old_arm_moveit_config/: CMakeLists.txt  package.xml
old_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
safety/: package.xml  setup.py
safety/safety/: safety_node.py
simulation/: package.xml  setup.py
simulation/meshes/Arm_URDF_2025/: base_link.STL  camera_link.STL  finger_1.STL  finger_2.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
simulation/meshes/Arm_URDF_2026/: base_link.STL  elbow_joint.STL  elbow_plate.STL  end_effector.STL  (+7 more)
simulation/urdfs/: Arm_URDF_2025.urdf  Arm_URDF_2026.urdf  arm_moveit_ompl.rviz  arm_urdf.rviz
utils/: setup_can.sh  utils_ada.py  utils_john.py
visualization/: package.xml  setup.py
visualization/visualization/: arm_viz.py  cam_compress.py  cam_conv.py
